@@ -1,7 +1,7 @@
 m4_define([bson_major_version], [1])
 m4_define([bson_minor_version], [1])
 m4_define([bson_micro_version], [10])
-m4_define([bson_prerelease_version], [dev])
+m4_define([bson_prerelease_version], [])
 
 m4_define(
     [bson_version],
@@ -12,7 +12,7 @@ m4_define(
 
 # bump up by 1 for every micro release with no API changes, otherwise
 # set to 0. after release, bump up by 1
-m4_define([bson_interface_age], [9])
+m4_define([bson_interface_age], [10])
 m4_define([bson_binary_age], [m4_eval(100 * bson_minor_version + bson_micro_version)])
 
 m4_define([lt_current], [m4_eval(100 * bson_minor_version + bson_micro_version - bson_interface_age)])
