@@ -1,6 +1,11 @@
 Libbson-1.1.10
 ==============
 
+No change since 1.1.9; released to keep pace with libmongoc's version.
+
+-- A. Jesse Jiryu Davis
+
+
 Libbson-1.1.9
 =============
 
